--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <span class="text-primary">Ledden</span>
         </h1>
         <div class="subheading mb-5">· (832) 585-4461 ·
-          <a href="mailto:name@email.com">blake.ledden@gmail.com</a>
+          <a href="mailto:blake.ledden@gmail.com">blake.ledden@gmail.com</a>
         </div>
         <p class="lead mb-5">I am a motivated IT professional with a diverse background in tech support, software development, and creating tech products focused on meeting the needs of both customers and company goals.</p>
         <div class="social-icons">
