LinkedIn and Github

--- a/index.html
+++ b/index.html
@@ -71,17 +71,11 @@
         </div>
         <p class="lead mb-5">I am a motivated IT professional with a diverse background in tech support, software development, and creating tech products focused on meeting the needs of both customers and company goals.</p>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://linkedin.com/in/blakeledden">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/bledden">
             <i class="fab fa-github"></i>
-          </a>
-          <a href="#">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
           </a>
         </div>
       </div>
