--- a/index.html
+++ b/index.html
@@ -71,11 +71,17 @@
         </div>
         <p class="lead mb-5">I am a motivated IT professional with a diverse background in tech support, software development, and creating tech products focused on meeting the needs of both customers and company goals.</p>
         <div class="social-icons">
-          <a href="https://linkedin.com/in/blakeledden">
+          <a href="#">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://github.com/bledden">
+          <a href="#">
             <i class="fab fa-github"></i>
+          </a>
+          <a href="#">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="#">
+            <i class="fab fa-facebook-f"></i>
           </a>
         </div>
       </div>
@@ -169,7 +175,7 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
+    <!-- <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
 
@@ -229,7 +235,7 @@
             Agile Development &amp; Scrum</li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
     <hr class="m-0">
 
@@ -243,9 +249,9 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
+    <!-- <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
+        <h2 class="mb-5">Awards &amp; Certifications</h2> -->
         <!-- <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
@@ -274,8 +280,8 @@
             3<sup>rd</sup>
             Place - James Buchanan High School - Hackathon 2005</li>
         </ul> -->
-      </div>
-    </section>
+      <!-- </div>
+    </section> -->
 
   </div>
 
