--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
         <h2 class="mb-5">Interests</h2>
         <p>Outside of work, I love spending time with friends, family, and my family pets, Lucy the lab and Gigi the cat. I am a casual video gamer, but enjoy the outdoors on long-distance runs, easy- going longboard rides, and time at the beach. I am originally from Colorado, so I also enjoy hiking, skiing, and mountain biking.</p>
         <p class="mb-0">When the weather doesn’t cooperate, I play with my raspberry pi’s and work on small electronics projects.</p>
+        <p
       </div>
     </section>
 
@@ -265,6 +266,12 @@
         </ul> -->
       <!-- </div>
     </section> -->
+
+  <footer class="footer text-faded text-center py-5">
+    <div class="container">
+      <p class="m-0 small">Copyright &copy; Blake Ledden 2020</p>
+    </div>
+  </footer>
 
   </div>
 
